5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1585_1015.log
== TEST (2019-03-28 10:46:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numeros1=int(input("digite o 1º numero "))
numeros2=int(input("digite o 2º numero"))
numeros3=int(input("digite o 3º numero"))

x=min(numero1,numero2,numero3)
y=nuemro1+numero2+numero3-x-z
z=max(numero,numero2,numero3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=min(numero1,numero2,numero3)
NameError: name 'numero1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:46:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numeros1=int(input("digite o 1º numero "))
numeros2=int(input("digite o 2º numero"))
numeros3=int(input("digite o 3º numero"))

x=min(numero1,numero2,numero3)
y=numero1+numero2+numero3-x-z
z=max(numero,numero2,numero3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=min(numero1,numero2,numero3)
NameError: name 'numero1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:46:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numeros1=int(input("digite o 1º numero "))
numeros2=int(input("digite o 2º numero"))
numeros3=int(input("digite o 3º numero"))

x=min(numero1,numero2,numero3)
y=numero1+numero2+numero3-x-z
z=max(numero,numero2,numero3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=min(numero1,numero2,numero3)
NameError: name 'numero1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:46:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numeros1=int(input("digite o 1 numero "))
numeros2=int(input("digite o 2 numero"))
numeros3=int(input("digite o 3 numero"))

x=min(numero1,numero2,numero3)
y=numero1+numero2+numero3-x-z
z=max(numero,numero2,numero3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=min(numero1,numero2,numero3)
NameError: name 'numero1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:47:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero1=int(input("digite o 1 numero "))
numero2=int(input("digite o 2 numero"))
numero3=int(input("digite o 3 numero"))

x=min(numero1,numero2,numero3)
y=numero1+numero2+numero3-x-z
z=max(numero,numero2,numero3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    y=numero1+numero2+numero3-x-z
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:48:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero1=int(input("digite o 1 numero "))
numero2=int(input("digite o 2 numero"))
numero3=int(input("digite o 3 numero"))

x=min(numero1,numero2,numero3)
z=max(numero,numero2,numero3)
y=numero1+numero2+numero3-x-z

print(x,y,z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    z=max(numero,numero2,numero3)
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:48:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero1=int(input("digite o 1 numero "))
numero2=int(input("digite o 2 numero"))
numero3=int(input("digite o 3 numero"))

x=min(numero1,numero2,numero3)
z=max(numero1,numero2,numero3)
y=numero1+numero2+numero3-x-z

print(x,y,z)
-- OUTPUT:
-2 0 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:48:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero1=int(input("digite o 1 numero "))
numero2=int(input("digite o 2 numero"))
numero3=int(input("digite o 3 numero"))

x=min(numero1,numero2,numero3)
z=max(numero1,numero2,numero3)
y=numero1+numero2+numero3-x-z

print(x,y,z)
-- OUTPUT:
-2 0 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:48:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero1=int(input("digite o 1 numero "))
numero2=int(input("digite o 2 numero"))
numero3=int(input("digite o 3 numero"))

x=min(numero1,numero2,numero3)
z=max(numero1,numero2,numero3)
y=numero1+numero2+numero3-x-z

print(x,y,z)
-- EXECUTION TIME:
0.144576
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2 0 10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
